--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,17 +57,19 @@ add_executable(${PROJECT_NAME}_exe ${SRC_LIST})
 FIND_LIBRARY( LIB_OPENCV_CORE NAMES opencv_core PATHS ${OPENCV_LIBS} NO_DEFAULT_PATH )
 FIND_LIBRARY( LIB_OPENCV_HIGHGUI NAMES opencv_highgui PATHS ${OPENCV_LIBS} NO_DEFAULT_PATH )
 FIND_LIBRARY( LIB_OPENCV_IMGPROC NAMES opencv_imgproc PATHS ${OPENCV_LIBS} NO_DEFAULT_PATH )
+FIND_LIBRARY( LIB_OPENCV_IMGCODECS NAMES opencv_imgcodecs PATHS ${OPENCV_LIBS} NO_DEFAULT_PATH )
 FIND_LIBRARY( LIB_BOOST_EXCEPTION NAMES boost_exception )
 
 # Show the found libraries.
 MESSAGE( STATUS "LIB_OPENCV_CORE = ${LIB_OPENCV_CORE}" )
 MESSAGE( STATUS "LIB_OPENCV_HIGHGUI = ${LIB_OPENCV_HIGHGUI}" )
 MESSAGE( STATUS "LIB_OPENCV_IMGPROC = ${LIB_OPENCV_IMGPROC}" )
+MESSAGE( STATUS "LIB_OPENCV_IMGCODECS = ${LIB_OPENCV_IMGCODECS}" )
 MESSAGE( STATUS "LIB_BOOST_EXCEPTION = ${LIB_BOOST_EXCEPTION}" )
 
 # Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_exe
-  ${LIB_OPENCV_CORE} ${LIB_OPENCV_HIGHGUI} ${LIB_OPENCV_IMGPROC}
+  ${LIB_OPENCV_CORE} ${LIB_OPENCV_HIGHGUI} ${LIB_OPENCV_IMGPROC} ${LIB_OPENCV_IMGCODECS}
   ${LIB_BOOST_EXCEPTION}
 )
 
