Add mutual information.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -67,6 +67,9 @@ MESSAGE( STATUS "LIB_OPENCV_IMGPROC = ${LIB_OPENCV_IMGPROC}" )
 MESSAGE( STATUS "LIB_OPENCV_IMGCODECS = ${LIB_OPENCV_IMGCODECS}" )
 MESSAGE( STATUS "LIB_BOOST_EXCEPTION = ${LIB_BOOST_EXCEPTION}" )
 
+SET( CXX_FLAGS "-g" )
+SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${CXX_FLAGS}" )
+
 # Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_exe
   ${LIB_OPENCV_CORE} ${LIB_OPENCV_HIGHGUI} ${LIB_OPENCV_IMGPROC} ${LIB_OPENCV_IMGCODECS}
